pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/no_clash_because_priv/src/pub_export.ph
pub use pack.data.Unit3 as Foo;